--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@awesome-cordova-plugins/wheel-selector": "^5.40.0",
-    "@ionic/react": "^6.0.0",
-    "@ionic/react-router": "^6.0.0",
+    "@ionic/react": "^6.0.16",
+    "@ionic/react-router": "^6.0.16",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -17,10 +17,13 @@
     "@types/react-router-dom": "^5.1.7",
     "cordova-wheel-selector-plugin": "^1.1.7",
     "ionicons": "^5.4.0",
-    "react-dom": "^17.0.2",
+    "magic.css": "^1.4.7",
+    "react-dom": "^18.0.0",
+    "react-magic": "^0.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "react-transition-group": "^4.4.2",
     "react-wheel-of-prizes": "^1.0.9",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
@@ -62,6 +65,6 @@
     ]
   },
   "devDependencies": {
-    "react": "^16.14.0"
+    "react": "^18.0.0"
   }
 }
